xLib6000 Change Log

v1.1.4

refactored many of the protocols and moved them to the Protocols.swift file


v1.1.3

Api.swift - added "sub meter all" into allSubscriptionCommands()
Radio.swift - removed the _metersToSubscribe property
Meter.swift - corrected the logic in parseStatus(_:radio:queue:inUse:) for NOT inUse
MeterCommands.swift - changed listRequest(callback: ) to NOT use the defaultReplyHandler
Radio.swift - commented out the meterList case in defaultReplyHandler(_:seqNum:responseValue:reply:)
Radio.swift - commented out the parseMeterListReply(_:) method
All Models - changed _api and _q property from var to let
Api.swift - changed kApiFirmwareSupport to 2.2.8.x

v1.1.2

Panadapter.swift - renamed daxChoices & daxChannels -> daxIqChoices & daxIqChanneld
Slice.swift - added daxChoices & daxChannels
Slice.swift - added txAntList property
all models - removed update(_:value:key:)
Api.swift - added update(_:value:key:)
all models - changed update(_:value:key:) to _api.update(_:value:key:)
RadioCommands.swift - refactored Gateway commands
Radio.swift - changed _api from "internal" to "private"
RadioCommands.swift - changed usage of _api to Api.sharedInstance
RadioCommands.swift - corrected "nickName", "radioScreensaver" & "startOffset" commands

v1.1.1

Radio.swift - moved atuClear(callback:), atuStart(callback:) & atuBypass(callback:) to AtuCommands.swift
Radio.swift - moved memoryApply(id:callback:), memoryCreate(), memoryRemove(id:callback:) to MemoryCommands.swift
Radio.swift - moved all helper methods to class methods on the object
Radio.swift - refactored to use update(_:value:key:) in parseInfoReply(_:) & parseVersionReply(_:)
SliceCommands.swift - corrected filterCmd(low:high:) and its usage
AudioStream, MicAudioStream, IqStream & TxAudioStream.swift - corrected test in class parseStatus(_:radio:queue:inUse:) for class isStatusForThisClient(_:)