@@ -3,6 +3,7 @@ xLib6000 Change Log
 v1.1.4
 
 refactored many of the protocols and moved them to the Protocols.swift file
+Meters.swift - added code to vitaProcessor(_:) to ignore duplicate meters in a single Vita packet
 
 
 v1.1.3
